; ModuleID = '/home/carl/AnghaBench/linux/net/nfc/extr_llcp_core.c___nfc_llcp_recv.c'
source_filename = "/home/carl/AnghaBench/linux/net/nfc/extr_llcp_core.c___nfc_llcp_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfc_llcp_local = type { i32, i32, %struct.sk_buff* }
%struct.sk_buff = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfc_llcp_local*, %struct.sk_buff*)* @__nfc_llcp_recv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__nfc_llcp_recv(%struct.nfc_llcp_local* %0, %struct.sk_buff* %1) #0 {
  %3 = alloca %struct.nfc_llcp_local*, align 8
  %4 = alloca %struct.sk_buff*, align 8
  store %struct.nfc_llcp_local* %0, %struct.nfc_llcp_local** %3, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %4, align 8
  %5 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %6 = load %struct.nfc_llcp_local*, %struct.nfc_llcp_local** %3, align 8
  %7 = getelementptr inbounds %struct.nfc_llcp_local, %struct.nfc_llcp_local* %6, i32 0, i32 2
  store %struct.sk_buff* %5, %struct.sk_buff** %7, align 8
  %8 = load %struct.nfc_llcp_local*, %struct.nfc_llcp_local** %3, align 8
  %9 = getelementptr inbounds %struct.nfc_llcp_local, %struct.nfc_llcp_local* %8, i32 0, i32 1
  %10 = call i32 @del_timer(i32* %9)
  %11 = load %struct.nfc_llcp_local*, %struct.nfc_llcp_local** %3, align 8
  %12 = getelementptr inbounds %struct.nfc_llcp_local, %struct.nfc_llcp_local* %11, i32 0, i32 0
  %13 = call i32 @schedule_work(i32* %12)
  ret void
}

declare dso_local i32 @del_timer(i32*) #1

declare dso_local i32 @schedule_work(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
